/*
 * Taken from https://github.com/dotansimha/graphql-eslint/blob/300f73be802bdd06432a5df34939521d1ce0d93b/packages/plugin/tests/require-id-when-available.spec.ts
 * MIT license https://github.com/dotansimha/graphql-eslint/blob/300f73be802bdd06432a5df34939521d1ce0d93b/LICENSE
 */

import { TextDecoder } from "util";
global.TextDecoder = TextDecoder as any;

import {
  GraphQLRuleTester,
  ParserOptions,
} from "@graphql-eslint/eslint-plugin";
import missingApolloKeyFieldsRule from "../missing-apollo-key-fields";

const TEST_SCHEMA = /* GraphQL */ `
  type Query {
    hasId: HasId!
    noId: NoId!
    vehicles: [Vehicle!]!
    keyField: [KeyFieldType]!
    flying: [Flying!]!
    books: [Book!]!
  }
  type NoId {
    name: String!
  }
  interface Vehicle {
    id: ID!
  }
  type Car implements Vehicle {
    id: ID!
    mileage: Int
  }
  interface Flying {
    hasWings: Boolean!
  }
  type Bird implements Flying {
    id: ID!
    hasWings: Boolean!
  }
  type KeyFieldType {
    objectId: ID!
    name: String!
  }
  type HasId {
    id: ID!
    name: String!
  }
  type Book {
    title: String!
    author: Author!
  }
  type Author {
    name: String!
    age: Int
  }
`;

const WITH_SCHEMA = {
  parserOptions: <ParserOptions>{
    schema: TEST_SCHEMA,
    operations: [
      `fragment HasIdFields on HasId {
        id
      }`,
      `fragment NestedHasIdFields on HasId {
        ...HasIdFields
      }`,
      `fragment DeeplyNestedHasIdFields on HasId {
        ...NestedHasIdFields
      }`,
      `fragment NestedNameOnly on HasId {
        ...NameOnly
      }`,
      `fragment NameOnly on HasId {
        name
      }`,
      `fragment InlineFragmentWithId on Vehicle {
        ...on Car {
          id
        }
      }`,
      `fragment BookAuthorName on Book {
        author {
          name
        }
      }`,
      `fragment AuthorName on Author {
        name
      }`,
    ],
  },
};
const ruleTester = new GraphQLRuleTester();

export const typePolicies = {
  KeyFieldType: {
    keyFields: ["objectId"],
  },
  Book: {
    keyFields: ["title", "author", ["name"]],
  },
};

ruleTester.runGraphQLTests(
  "missing-apollo-key-fields",
  missingApolloKeyFieldsRule as any, // FIXME: Not casting this as any leads to ts(2590) error
  {
    valid: [
      {
        ...WITH_SCHEMA,
        code: `query { noId { name } }`,
        options: [{ typePolicies }],
      },
      {
        ...WITH_SCHEMA,
        code: `query { hasId { id name } }`,
        options: [{ typePolicies }],
      },
      {
        ...WITH_SCHEMA,
        code: `query { keyField { objectId name } }`,
        options: [{ typePolicies }],
      },
      {
        ...WITH_SCHEMA,
        code: `query { hasId { ...HasIdFields } }`,
        options: [{ typePolicies }],
      },
      {
        ...WITH_SCHEMA,
        code: `query { hasId { ...NestedHasIdFields } }`,
        options: [{ typePolicies }],
      },
      {
        ...WITH_SCHEMA,
        code: `query { hasId { ...DeeplyNestedHasIdFields } }`,
        options: [{ typePolicies }],
      },
      {
        ...WITH_SCHEMA,
        code: `query { vehicles { ...InlineFragmentWithId } }`,
        options: [{ typePolicies }],
      },
      {
        ...WITH_SCHEMA,
        code: `query { books { title author { name } } }`,
        options: [{ typePolicies }],
      },
      {
        ...WITH_SCHEMA,
        code: `query { books { title author { name age } } }`,
        options: [{ typePolicies }],
      },
      {
        ...WITH_SCHEMA,
        code: `query { books { title ...BookAuthorName } }`,
        options: [{ typePolicies }],
      },
      {
        ...WITH_SCHEMA,
        code: `query { books { title author { ...AuthorName } } }`,
        options: [{ typePolicies }],
      },
      {
        ...WITH_SCHEMA,
        code: `query { vehicles { id ...on Car { id mileage } } }`,
        options: [{ typePolicies }],
      },
      {
        ...WITH_SCHEMA,
        code: `query { vehicles { ...on Car { id mileage } } }`,
        options: [{ typePolicies }],
      },
      {
        ...WITH_SCHEMA,
        code: `query { flying { ...on Bird { id } } }`,
        options: [{ typePolicies }],
      },
      {
        ...WITH_SCHEMA,
        code: `query { vehicles { id ...on Car { mileage } } }`,
        options: [{ typePolicies }],
      },
    ],
    invalid: [
      {
        ...WITH_SCHEMA,
        code: `query { hasId { name } }`,
        output: `query { hasId { id\nname } }`,
        errors: [
          {
            message: `The key-field "id" must be selected for proper Apollo Client store denormalisation purposes.`,
          },
        ],
        options: [{ typePolicies }],
      },
      {
        ...WITH_SCHEMA,
        code: `query { keyField { id name } }`,
        output: `query { keyField { objectId\nid name } }`,
        errors: [
          {
            message: `The key-field "objectId" must be selected for proper Apollo Client store denormalisation purposes.`,
          },
        ],
        options: [{ typePolicies }],
      },
      {
        ...WITH_SCHEMA,
        code: `query { hasId { name ...NestedNameOnly } }`,
        output: `query { hasId { id\nname ...NestedNameOnly } }`,
        errors: [
          {
            message: `The key-field "id" must be selected for proper Apollo Client store denormalisation purposes.`,
          },
        ],
        options: [{ typePolicies }],
      },
      {
        ...WITH_SCHEMA,
        code: `query { books { author { name } } }`,
        output: `query { books { title\nauthor { name } } }`,
        errors: [
          {
            message: `The key-field "title" must be selected for proper Apollo Client store denormalisation purposes.`,
          },
        ],
        options: [{ typePolicies }],
      },
      {
        ...WITH_SCHEMA,
        code: `query { books { title author { age } } }`,
        errors: [
          {
            message: `The key-field "author.name" must be selected for proper Apollo Client store denormalisation purposes.`,
          },
        ],
        options: [{ typePolicies }],
      },
      {
        ...WITH_SCHEMA,
        code: `query { books { author { age } } }`,
        output: `query { books { title\nauthor { age } } }`,
        errors: [
          {
            message: `The key-fields "title and author.name" must be selected for proper Apollo Client store denormalisation purposes.`,
          },
        ],
        options: [{ typePolicies }],
      },
    ],
  },
);
